--- a/tindev/package.json
+++ b/tindev/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.0",
-    "react-navigation": "^4.4.0"
+    "react-navigation": "^4.4.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
